--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="banner">
+        <h1 class="header">
+            Sneaker Sales
+        </h1>
+    </div>
+
+    <div class="user-input">
+        <form id="sneaker-form">
+            <div class="sneaker-form-input">
+                <label for="name">name</label>
+                <input type="text" id="name" class="text-box">
+            </div>
+            <div class="sneaker-form-input">
+                <label for="size">size</label>
+                <input type="text" id="Size" class="text-box">
+            </div>
+            <div class="sneaker-form-input">
+                    <label for="price">price</label>
+                    <input type="text" id="price" class="text-box">
+            </div>
+            <div class="sneaker-form-input">
+                <label for="firstAppearance">sold</label>
+                <input type="text" id="sold" class="text-box">
+            </div>
+            <div class="sneaker-form-input">
+                    <label for="image">Enter URL for an Image</label>
+                    <input type="text" id="image" class="text-box">
+                </div>
+                <div class="sneaker-form-input">
+                    <input type="submit" value="Submit" class="btn btn-red">
+                </div>
+        </form>
+    </div>
+    
+    <div class="display">
+    </div>
+    
+
+
+
     <script src="app.js"></script>
 </body>
 </html>
