--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="sneaker-form-input">
                 <label for="size">size</label>
-                <input type="text" id="Size" class="text-box">
+                <input type="text" id="size" class="text-box">
             </div>
             <div class="sneaker-form-input">
                     <label for="price">price</label>
