--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <input type="text" id="image" class="text-box">
                 </div>
                 <div class="sneaker-form-input">
-                    <input type="submit" value="Submit" class="btn btn-red">
+                    <input type="submit" value="submit" class="btn btn-red">
                 </div>
         </form>
     </div>
