--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
         </form>
     </div>
     
-    <div class="display">
+    <div class="display flex-col">
+
+    <div>
+
+    </div>
+    <div class="display-all"></div>
     </div>
     
 
